@@ -2,6 +2,10 @@ apt (0.9.7.8) UNRELEASED; urgency=low
 
   [ Manpages translation updates ]
   * Italian (Beatrice Torracca). Closes: #696601
+  
+  [ Michael Vogt ]
+  * fix pkgProblemResolver::Scores, thanks to Paul Wise. 
+    Closes: #697577
 
  -- Christian Perrier <bubulle@debian.org>  Mon, 24 Dec 2012 07:01:20 +0100
 
